Fix z-index bug for top menu that hides spotlight image.

--- a/src/app/modules/dashboard/components/dashboard/dashboard.component.css
+++ b/src/app/modules/dashboard/components/dashboard/dashboard.component.css
@@ -4,6 +4,6 @@
 }
 
 ::ng-deep .priority-menu-bar {
-  z-index: 100000000;
+  z-index: 40;
   width: calc(100vw - 7px);
 }
